--- a/Packages/RAD Studio 12.2 Athens/Zx.IDETools.dproj
+++ b/Packages/RAD Studio 12.2 Athens/Zx.IDETools.dproj
@@ -35,16 +35,6 @@
         <CfgParent>Base</CfgParent>
         <Base>true</Base>
     </PropertyGroup>
-    <PropertyGroup Condition="'$(Base_Win64x)'!=''">
-        <DCC_UsePackage>rtl;$(DCC_UsePackage)</DCC_UsePackage>
-    </PropertyGroup>
-    <PropertyGroup Condition="'$(Base_OSXARM64)'!=''">
-        <DCC_UsePackage>rtl;$(DCC_UsePackage)</DCC_UsePackage>
-    </PropertyGroup>
-    <PropertyGroup Condition="'$(Base_iOSSimARM64)'!=''">
-        <DCC_CBuilderOutput>None</DCC_CBuilderOutput>
-        <DCC_UsePackage>rtl;$(DCC_UsePackage)</DCC_UsePackage>
-    </PropertyGroup>
     <PropertyGroup Condition="'$(Base)'!=''">
         <SanitizedProjectName>Zx_IDETools</SanitizedProjectName>
         <DCC_CBuilderOutput>All</DCC_CBuilderOutput>
@@ -95,6 +85,7 @@
         <DCCReference Include="..\..\Source\Zx.IT.DbgVisualizer.GUID.pas"/>
         <DCCReference Include="..\..\Source\Zx.IT.KeyBinding.DisableCtrlEnter.pas"/>
         <DCCReference Include="..\..\Source\Zx.IT.KeyBinding.ReloadLSPServer.pas"/>
+        <DCCReference Include="..\..\Source\Zx.IT.KeyBinding.ReopenLastClosedTab.pas"/>
         <BuildConfiguration Include="Base">
             <Key>Base</Key>
         </BuildConfiguration>
